reaadding gitpush download

--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
 
+        </div>
+        <div class="col-md-4">
+          <h2>Apps</h2>
+          <p>Below is a list of our program downloads</p>
+          <p><a class="btn btn-default" href="/apps/gitpush.sh" role="button">Download gitpush &raquo;</a></p>
+       </div>
 
       <hr>
 
