--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Assignment 1</a>
+          <a class="navbar-brand" href="/">Assignment 1</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -92,7 +92,7 @@
         <div class="col-md-4">
           <h2>Apps</h2>
           <p>Below is a list of our program downloads</p>
-          <p><a class="btn btn-default" href="./well-known/apps/gitpush.sh" role="button">Download gitpush &raquo;</a></p>
+          <p><a class="btn btn-default" href="/apps/gitpush.sh" role="button">Download gitpush &raquo;</a></p>
        </div>
 
       <hr>
