Took out wall of text in index

--- a/index.html
+++ b/index.html
@@ -65,22 +65,7 @@
       <div class="row">
         <div class="col-md-4">
           <h2>New User</h2>
-          <p>The link below will give you access to the Create a new user section. It will ask for a
- - Username
- - Email Address
- - Full Address
- - Phone Number 
- - User Bio
- - Regex will be used to filter out 
-    - Alphabetic Characters from the english alphabet in the username section
-    - Email Address should follow the proper email form. Username should only contain alphanumeric  characters dots and dashes. Domain can only contain alphanumeric characters and dashes. tld must contain alphabetic characters and dots. 
-    - Phnone number must be in format 1234567890 123.456.7890 123-456-7890 or (123) 456-7890 (Basically all variations)
-    - postal Code must be canadian style A1B2C3 A1B 2C3
- - Bio must be stripped of all code (HTML CSS or javascript special charactes) 
- - Address and bio field must be stripped of any sql keywords (insert update and delete) 
- - Strip any # and -- characters 
- - strip any excess leading and trailing whitespace from all fields 
-	 </p>
+          <p>Create a new user below</p>
           <p><a class="btn btn-default" href="newuser.php" role="button">New User &raquo;</a></p>
         </div>
         <div class="col-md-4">
