plain HTML pg works, trying it with the php script

--- a/test.html
+++ b/test.html
@@ -4,6 +4,10 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
+        <?php
+            #redircts to index after 6 sec, but doesnt work if anything is drawn on screen
+           header("redirect:6;url=index.html");
+        ?>
         <meta charset="utf-8">
         <meta https-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
@@ -53,7 +57,23 @@
     </nav>
 
  <h2>IF U CAN SEE THIS SOMETHING WENT RIGHT!!!!!! </h2>
+<?php
+#adds users to the db
+#general connection(not sure if works)
+$db = resource pg_connect ("host=localhost port=5432 dbname=user user=admin password=lizA098");
 
+#insert query
+$insertQuery = ("INSERT INTO users VALUES '$_POST[uName]', '$_POST[email]', '$_POST[sNum]', '$_POST[sName]', '$_POST[city]', '$_POST[province]', '$_POST[pCode]', '$_POST[pNum]', '$_POST[bio]' ");
+
+#executes
+$result = pg_query($insertQuery); 
+
+if(!result){
+echo "INSERT FAILED!!!";
+}
+else
+echo "INSERT SUCCESSFUL!!!";
+?>
       <footer>
         <p>&copy; D'AngeloTrudge 2018</p>
       </footer>
