--- a/test.html
+++ b/test.html
@@ -60,6 +60,12 @@
 <?php
 $conn = resource pg_connect ("host=localhost port=5432 dbname=user user=admin password=lizA098");
 
+if(!conn){
+echo "<h2>CONNECTION UNSUCCESSFUL!!!!</h2>";
+}
+else
+echo "<h2>CONNECTION SUCCESSFUL!!!</h2>";
+
 $result = pg_prepare($dbconn, "INSERT","INSERT (uName, email, sName, sNum, city, province, pCode, pNum, bio) INTO users VALUES ($1)"); 
 
 #input sanitization goes here
