php echo was showing the echo msg plus source code, hopefully fixed

--- a/test.html
+++ b/test.html
@@ -61,10 +61,10 @@
 $conn = resource pg_connect ("host=localhost port=5432 dbname=user user=admin password=lizA098");
 
 if(!conn){
-echo "<h2>CONNECTION UNSUCCESSFUL!!!!</h2>";
+echo '<h2>CONNECTION UNSUCCESSFUL!!!!</h2>';
 }
 else
-echo "<h2>CONNECTION SUCCESSFUL!!!</h2>";
+echo '<h2>CONNECTION SUCCESSFUL!!!</h2>';
 
 $result = pg_prepare($dbconn, "INSERT","INSERT (uName, email, sName, sNum, city, province, pCode, pNum, bio) INTO users VALUES ($1)"); 
 
@@ -75,10 +75,10 @@ $stmtVal = "{'$_POST[uName]', '$_POST[email]', '$_POST[sNum]', '$_POST[sName]', 
 $rtn = pg_execute($conn, "INSERT", array($stmtVal));
 
 if(!rtn){
-echo "<h2>INSERT UNSUCCESSFUL!!!!</h2>";
+echo '<h2>INSERT UNSUCCESSFUL!!!!</h2>';
 }
 else
-echo "<h2>INSERT SUCCESSFUL!!!</h2>";
+echo '<h2>INSERT SUCCESSFUL!!!</h2>';
 
 pg_close($conn);
 ?>
