forgot the $ in front of vars....

--- a/test.html
+++ b/test.html
@@ -60,7 +60,7 @@
 <?php
 $conn = resource pg_connect ("host=localhost port=5432 dbname=user user=admin password=lizA098");
 
-if(!conn){
+if(!$conn){
 echo '<h2>CONNECTION UNSUCCESSFUL!!!!</h2>';
 }
 else
@@ -75,7 +75,7 @@ $stmtVal = "{'$_POST[uName]', '$_POST[email]', '$_POST[sNum]', '$_POST[sName]', 
 
 $rtn = pg_execute($conn, "INSERT", $stmtVal);
 
-if(!rtn){
+if(!$rtn){
 echo '<h2>INSERT UNSUCCESSFUL!!!!</h2>';
 }
 else
