--- a/newUser.html
+++ b/newUser.html
@@ -1,3 +1,32 @@
+<!-- **************************************** *
+ * New User webpage on demo site 	      	  *
+ * developed by Matthew D'Angelo 	          *
+ * This is where someone will make a new user *
+ * Users will enter uname, email, fAddr, pNum *
+ * and bio All stripped for excess whitespace * 
+ * Regex is used			                  *
+ *  - uName most be composed of alphabetic    *
+ *  - email is form username@domain.tld	      * 
+ *  - username can contain alphanumeric dots  * 
+ *       & Dashes. Domain must only contain   * 
+ *      alphanumeric and dashes 	          * 
+ *      tld must contain characters and dots  * 
+ *  - Phone number must be a NA # with format * 
+ *      1234567890, 123.456.7890, 	          *  
+ *      123-456-7890(123) 456-7890. 10 # long * 
+ *  - Postal code must be canadian style      * 
+ *      A1B 2C3 & A1B2C3 		              * 
+ * Using other validation techiques 	      * 
+ *  - bio fields must be stripped of code     * 
+ *	HTML CSS JS special characters            * 
+ *  - bio field stripped of SQL keywords      * 
+ *	INSERT UPDATE DELETE		              * 
+ * Strip any # and -- character sequence      * 
+ * Pass should request and store info 	      *  
+ * ****************************************** -->
+<?php
+	print_r($_POST);
+?>
 <!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
@@ -5,7 +34,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <meta https-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,49 +84,49 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Demo Site</h1>
-        <p>This is a demo site for assignment 1 for Secure Software Development developed by Matthew D'Angelo and Tjon Trudge</p>
-      </div>
+        <h1>New User Creation</h1>
+        </div>
     </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>New User</h2>
-          <p>The link below will give you access to the Create a new user section. It will ask for a
- - Username
- - Email Address
- - Full Address
- - Phone Number 
- - User Bio
- - Regex will be used to filter out 
-    - Alphabetic Characters from the english alphabet in the username section
-    - Email Address should follow the proper email form. Username should only contain alphanumeric  characters dots and dashes. Domain can only contain alphanumeric characters and dashes. tld must contain alphabetic characters and dots. 
-    - Phnone number must be in format 1234567890 123.456.7890 123-456-7890 or (123) 456-7890 (Basically all variations)
-    - postal Code must be canadian style A1B2C3 A1B 2C3
- - Bio must be stripped of all code (HTML CSS or javascript special charactes) 
- - Address and bio field must be stripped of any sql keywords (insert update and delete) 
- - Strip any # and -- characters 
- - strip any excess leading and trailing whitespace from all fields 
-	 </p>
-          <p><a class="btn btn-default" href="newUser.html" role="button">New User &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>User List</h2>
-          <p>List all users in the datbase</p>
-          <p><a class="btn btn-default" href="listUser.php" role="button">LOOK HERE &raquo;</a></p>
-       </div>
 
-        <div class="col-md-4">
-          <h2>Apps</h2>
-          <p>Below is a list of our program downloads</p>
-          <p><a class="btn btn-default" href="gitpush.sh" role="button">Download gitpush &raquo;</a></p>
-       </div>
+         <h2>Enter Your User Information</h2>
+	 <form name='newUser' action='userAdded.php' method='post'>
+	 <br> 
+	 <br> 
+	  Username: <input type='text' name='uname' id='uname'/> 
+	<!--//uName validation = ereg([A-Za-z]{1,25})-->
+	   Email Address: <input type = 'email' name='email' id='email'/> 
+	<!--//Validation for email = ereg([A-Za-z0-9\.\-]{1,64}+@[A-Za-z0-9\-]{1,188}+\.[A-Za-z\.]{1,9})-->
+	 <br> 
+	 <br> 
+	   Street Number: <input type = 'text' name='snum' id='snum'> 
+	   Street Name: <input type = 'text' name='sname' id='sname'/> 
+	 <br> 
+	 <br> 
+	   City: <input type = 'text' name='city' id='city'/> 
+	   Province: <select name='province' name='province' id='province'>
+		<option value='0'>--Select--</option>
+		<option value='Ontario'>Ontario</option>
+		<option value='Quebec'>Quebec</option>
+		</select> 
+	 <br> 
+	 <br> 	
+	   Postal Code: <input type = 'text' name='pcode' id='pcode'/> 
+	   Phone Number: <input type = 'tel' name='pnum' id='pnum'/> 
+	<!--//pNum validation = ereg (\(?[0-9]{3}[\.\-\)]?[0-9]{3}[\.\-]?[0-9]{4}-->
+	 <br> 
+	 <br> 
+	   Bio: <textarea name='bio' rows='5' cols='40'></textarea> 
+	 <br> 
+	 <br> 
+	   <input type='submit' name='submit' value='Submit'/> 
+	   <input type='reset' name='reset' value='Reset'/> 
+         </form>
 
       <hr>
 
       <footer>
+          <p><a class="btn btn-default" href="index.html" role="button">Index &raquo;</a></p>
         <p>&copy; D'AngeloTrudge 2018</p>
       </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
