--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
  - Strip any # and -- characters 
  - strip any excess leading and trailing whitespace from all fields 
 	 </p>
-          <p><a class="btn btn-default" href="newUser.html" role="button">New User &raquo;</a></p>
+          <p><a class="btn btn-default" href="newuser.php" role="button">New User &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>User List</h2>
