--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="col-md-4">
           <h2>User List</h2>
           <p>List all users in the datbase</p>
-          <p><a class="btn btn-default" href="listUser.php" role="button">LOOK HERE &raquo;</a></p>
+          <p><a class="btn btn-default" href="listUser.php" role="button">User List &raquo;</a></p>
        </div>
 
         <div class="col-md-4">
