--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">Home</a>
-          <a class="nvbar-brand" href="/SSD1">SSD1</a>
+          <a class="navbar-brand" href="/SSD1">SSD1</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
