--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Demo Site</h1>
-        <p>This is a demo site for assignment 1 for Secure Software Development developed by Matthew D'Angelo and Tjon Trudge</p>
+        <h1>Secure Software Development Assignment 1/h1>
+        <p>This is a live demo for Assignment 1 of Secure Software Development \n
+           Created by Matthew D'Angelo and Tjon Trudge
+        </p>
       </div>
     </div>
 
