--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Secure Software Development Assignment 1/h1>
-        <p>This is a live demo for Assignment 1 of Secure Software Development \n
+        <h1>Assignment 1 </h1>
+        <p>This is a live demo for Assignment 1 of Secure Software Development</p>
+        <P>
            Created by Matthew D'Angelo and Tjon Trudge
         </p>
       </div>
